--- a/public/css/tooplate-artxibition.css
+++ b/public/css/tooplate-artxibition.css
@@ -1768,8 +1768,8 @@ Shows Events Page
     top: 0;
     left: 0;
     width: 100%;
-    height:55%;
-    
+    height: 55%;
+
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
 }
@@ -2741,4 +2741,9 @@ responsive
         -webkit-transform: translateY(0px);
         transform: translateY(0px);
     }
+}
+
+.prod-img-size {
+    max-height: 200px;
+    object-fit: cover;
 }
