--- a/public/css/tooplate-artxibition.css
+++ b/public/css/tooplate-artxibition.css
@@ -1567,6 +1567,7 @@ Rent Venue Page
     background-repeat: no-repeat;
     padding: 110px 0px;
     text-align: center;
+    position: relative;
 }
 
 .page-heading-rent-venue::before {
@@ -1575,7 +1576,7 @@ Rent Venue Page
     top: 0;
     left: 0;
     width: 100%;
-    height: 48%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
